Fix header alignment

--- a/src/components/Logo-hero/logoHero.module.scss
+++ b/src/components/Logo-hero/logoHero.module.scss
@@ -2,7 +2,7 @@
   background-image: url('../../images/pink-background.svg');
   background-size: cover;
   background-position: top;
-  padding-top: 150px;
+  padding-top: 170px;
   padding-bottom: 100px;
 }
 
